# cap-n-proto-proj

./: .gitignore  LICENSE  README.md  experimentlog.txt  main.py  pyproject.toml  requirements.txt
cnpap/: sensor.capnp  sensor.proto  sensor_pb2.py  sensor_pb2_grpc.py
iot/: gpio_mock.py  main.py  module.py  service.py
lib/datalib/: model.py  service.py
lib/timelog/: service.py
notebook/: analysis.ipynb
proto/: data.proto
py/cnp-grpc-server/: main.py  pyproject.toml
py/cnp-iot-emitter/: main.py  pyproject.toml
py/cnp-iot-emitter/src/: main.py
py/cnp-iot-emitter/src/data/: __init__.py  service.py
py/cnp-iot-emitter/src/reader/: __init__.py  service.py
server/: controller.py  grpc_server.py  main.py  service.py
