[project]
name = "cnp-iot-emitter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "cnp-test-types",
    "fastapi[all]>=0.127.0",
    "grpcio>=1.76.0",
    "polars>=1.36.1",
    "pycapnp>=2.2.1",
    "requests>=2.32.5",
    "uvicorn>=0.40.0",
]

[tool.uv.sources]
cnp-test-types = { path = "../lib/cnp_test_types" }
